infrastructure/base/prometheus/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
  hostnames:
    - alertmanager.tools.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-alertmanager
          namespace: monitor
          port: 9093
