infrastructure/base/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
  hostnames:
    - prometheus.tools.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-server
          namespace: monitor
          port: 80
